sidebar gradient, still janky in mobile, fixing up z-indexes padding, and margins

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,140 @@
 body {
+  position: relative;
   background-image: url("../Images/DSC_0425.JPG");
   background-size: cover;
   background-repeat: inherit;
   background-position: 50% 30%;
   background-attachment: fixed;
   perspective: 4000px;
+  z-index: 1;
+  
+}
+.back-grad {
+  padding-top: 0px;
+  margin-left: 0px;
+  margin-top: -20px;
+  margin-bottom: -80px;
+  padding-bottom: -50px;
+
+background: -moz-linear-gradient(40deg,  rgba(0,0,0,0.45) 0%, rgba(0,0,0,0.03) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(40deg,  rgba(0,0,0,0.45) 0%,rgba(0,0,0,0.02) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(40deg,  rgba(0,0,0,0.35) 0%,rgba(0,0,0,0.01) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 );
+height: 100%;
+z-index: -13; 
 }
 /* body:not(:hover) {
     animation: Tornado-mode 4s;
     animation-iteration-count: 2;
 } */
+.nav-container {
+  padding-right: 30px;
+  margin-right: 100px;
+  margin-left: -20px;
+  margin-bottom: -40px;
+  padding-left: 10px;
+  padding-bottom: -40px;
+  width: 100%;
+height: 100%;
+background: -moz-linear-gradient(60deg,  rgba(0,0,0,0.85) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(60deg,  rgba(0,0,0,0.85) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(60deg,  rgba(0,0,0,0.85) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); 
+border-radius: 20%;
+}
+.container {
+  z-index: 5;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+.side-nav li {
+  list-style-type: none;
+  align-self: center;
+  justify-self: center;
+}
+.nav-container li :hover{
+  background: -moz-linear-gradient(45deg,  rgba(0,0,0,0.015) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg,  rgba(0,0,0,0.015) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg,  rgba(0,0,0,0.015) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); 
+  z-index: 2;
+}
+
+.side-nav {
+  /* overflow: hidden; */
+  position: absolute;
+height: 100%;
+  float: left;
+  list-style: none;
+  margin-right: 540px;
+  margin-top: -20px;
+  padding-top: 20px;
+  padding-right: 100px;
+  margin-bottom: -40px;
+  padding-bottom: -50px;
+  margin: 0;
+  /* display: flex;
+  flex-direction: column;
+  flex-grow: 100%; */
+  align-items: center;
+  font-size: 30px;
+  text-decoration: white;
+  font-weight: normal;
+  text-shadow:rgba(0, 0, 0, 0.4);
+  font-stretch: semi-expanded;
+  border-radius: 5%;
+  background: -moz-linear-gradient(90deg,  rgba(0,0,0,0.80) 0%, rgba(0,0,0,0.0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(90deg,  rgba(0,0,0,0.80) 0%,rgba(0,0,0,0.0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(90deg,  rgba(0,0,0,0.80) 0%,rgba(0,0,0,0.0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); 
+z-index: 1;
+  }
+  .side-nav ul {
+    background-position: left;
+    position: relative;
+    
+  }
+
+.side-nav ul li :hover {
+  list-style-type: none;
+  font-size: 40px;
+  text-decoration:  rgba(20, 2, 2, 0.9);
+  font-weight: bolder;
+  text-shadow:rgba(0, 0, 0, 0.7);
+  font-stretch: 100px;
+  background: rgba(0,0,0,0.0001);
+  
+}
+.side-nav ul li a {
+  list-style-type: none;
+  font-size: 35px;
+  color: rgba(255, 255, 255, 0.575);
+  letter-spacing: normal;
+  
+}
+.back-grad .nav-container .side-nav ul li a :hover {
+  text-decoration-color: turquoise;
+  list-style: none;
+  color: white;
+  letter-spacing: 50px;
+  font-kerning: 50px;
+  font-size: 50px;
+  background: rgba(0,0,0,0.0001);
+}
 .sect1 {
-  padding-top: 200px;
+  padding-top: 100px;
+  display: flex;
   background-image: url("../Images/DSC_0425.JPG");
   background-color: black;
-  background-size: inherit;
+  background-size: 125%;
   border-radius: 50%;
-  background-repeat: inherit;
-  background-position: 50% 30%;
-  background-attachment: fixed;
+  background-repeat: inheritin;
+  background-position: 70% 30%;
+  /* background-attachment: fixed; */
   background-blend-mode: difference;
   transform-style: preserve-3d;
   perspective: 4000px;
+  z-index: 1;
 }
 /* 
 .sect1:not(:hover){
@@ -47,6 +160,7 @@ animation-iteration-count: 6;
 
 .img-fluid {
   -webkit-box-reflect: below -70px linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+  z-index: 6;
   
 }
 .img-fluid:not(:hover) {
@@ -62,22 +176,23 @@ animation-iteration-count: 6;
   overflow: hidden;
   overflow-x: 470px;
   box-shadow: 400px;
-  z-index: 4;
+  z-index: 7;
 }
 
   .manninoLogo1 img-fluid:not(:hover) {
   animation: Reverse-tornado 10s;
   animation-iteration-count: infinite;
   transform-style: preserve-3d;
+  z-index: 7;
 }
 
 .card-body {
   backdrop-filter: blur(1px);
-  z-index: 3;
+  z-index: 500;
 }
 
 .card {
-  margin-top: 300px;
+  margin-top: 250px;
 
   background-color: rgba(106, 0, 226, 0.1);
   -webkit-backdrop-filter: blur(3px);
@@ -85,7 +200,8 @@ animation-iteration-count: 6;
   border-radius: 17%;
   box-shadow: inherit;
   border-color: rgba(170, 120, 228, 0.637);
-  z-index: 1;
+  z-index: 600;
+  padding-bottom: 3px;
 }
 
 .card-body:not(:hover) {
@@ -115,12 +231,16 @@ animation-iteration-count: 6;
   }
 }
 
-
+.card .card-body{
+  padding-bottom: 30px;
+  margin-bottom: 40px;
+}
 
 svg path,
 svg polygon {
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(6px);
+  z-index: 900;
 }
 svg:hover path,
 svg:hover polygon {
@@ -139,4 +259,5 @@ h2 {
 .imgcontainer:hover {
   opacity: 0.8;
   transition-delay: 150ms;
+  z-index: 700; 
 }
